// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Component combines multiple props 1`] = `
<Text
  style={
    [
      {
        "fontSize": 32,
        "lineHeight": 40,
      },
      {
        "fontFamily": "Inter_700Bold",
      },
      {
        "color": "primary",
      },
      {
        "textAlign": "center",
      },
      false,
      undefined,
    ]
  }
>
  Combined Props Text
</Text>
`;

exports[`Text Component renders with body variants 1`] = `
<Text
  style={
    [
      {
        "fontSize": 14,
        "lineHeight": 21,
      },
      {
        "fontFamily": "Inter_400Regular",
      },
      {
        "color": "#0F172A",
      },
      false,
      false,
      undefined,
    ]
  }
>
  Body Text
</Text>
`;

exports[`Text Component renders with caption variants 1`] = `
<Text
  style={
    [
      {
        "fontSize": 12,
        "lineHeight": 18,
      },
      {
        "fontFamily": "Inter_400Regular",
      },
      {
        "color": "#64748B",
      },
      false,
      false,
      undefined,
    ]
  }
>
  Caption Text
</Text>
`;

exports[`Text Component renders with center alignment 1`] = `
<Text
  style={
    [
      {
        "fontSize": 14,
        "lineHeight": 21,
      },
      {
        "fontFamily": "Inter_400Regular",
      },
      {
        "color": "#0F172A",
      },
      {
        "textAlign": "center",
      },
      false,
      undefined,
    ]
  }
>
  Centered Text
</Text>
`;

exports[`Text Component renders with custom color 1`] = `
<Text
  style={
    [
      {
        "fontSize": 14,
        "lineHeight": 21,
      },
      {
        "fontFamily": "Inter_400Regular",
      },
      {
        "color": "#ff0000",
      },
      false,
      false,
      undefined,
    ]
  }
>
  Colored Text
</Text>
`;

exports[`Text Component renders with default props 1`] = `
<Text
  style={
    [
      {
        "fontSize": 14,
        "lineHeight": 21,
      },
      {
        "fontFamily": "Inter_400Regular",
      },
      {
        "color": "#0F172A",
      },
      false,
      false,
      undefined,
    ]
  }
>
  Hello World
</Text>
`;

exports[`Text Component renders with header variants 1`] = `
<Text
  style={
    [
      {
        "fontSize": 32,
        "lineHeight": 40,
      },
      {
        "fontFamily": "Inter_700Bold",
      },
      {
        "color": "#0F172A",
      },
      false,
      false,
      undefined,
    ]
  }
>
  Title Text
</Text>
`;

exports[`Text Component renders with weight styling 1`] = `
<Text
  style={
    [
      {
        "fontSize": 14,
        "lineHeight": 21,
      },
      {
        "fontFamily": "Inter_700Bold",
      },
      {
        "color": "#0F172A",
      },
      false,
      false,
      undefined,
    ]
  }
>
  Bold Text
</Text>
`;
